// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for a basic heading 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  font-weight: 700;
  line-height: 1.2;
}

.c0:not(:last-child) {
  margin-bottom: 1rem;
}

.heading.c0 + .sub-heading {
  margin-top: -1rem;
}

h1.c0 {
  font-size: 3rem;
}

h2.c0 {
  font-size: 2.5rem;
}

h3.c0 {
  font-size: 2rem;
}

h4.c0 {
  font-size: 1.5rem;
}

h5.c0 {
  font-size: 1.25rem;
}

h6.c0 {
  font-size: 1rem;
}

.c0 .c2 {
  top: 0.15em;
}

<h1
  class="heading c0 c1"
>
  test
</h1>
`;

exports[`renders correctly for a heading of a different element 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  font-weight: 700;
  line-height: 1.2;
}

.c0:not(:last-child) {
  margin-bottom: 1rem;
}

.heading.c0 + .sub-heading {
  margin-top: -1rem;
}

h1.c0 {
  font-size: 3rem;
}

h2.c0 {
  font-size: 2.5rem;
}

h3.c0 {
  font-size: 2rem;
}

h4.c0 {
  font-size: 1.5rem;
}

h5.c0 {
  font-size: 1.25rem;
}

h6.c0 {
  font-size: 1rem;
}

.c0 .c2 {
  top: 0.15em;
}

<h3
  class="heading c0 c1"
>
  test
</h3>
`;

exports[`renders correctly for a heading with a subheading 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  font-weight: 700;
  line-height: 1.2;
}

.c0:not(:last-child) {
  margin-bottom: 1rem;
}

.heading.c0 + .sub-heading {
  margin-top: -1rem;
}

h1.c0 {
  font-size: 3rem;
}

h2.c0 {
  font-size: 2.5rem;
}

h3.c0 {
  font-size: 2rem;
}

h4.c0 {
  font-size: 1.5rem;
}

h5.c0 {
  font-size: 1.25rem;
}

h6.c0 {
  font-size: 1rem;
}

.c0 .c3 {
  top: 0.15em;
}

.c2 {
  font-weight: 700;
  line-height: 1.2;
}

.c2:not(:last-child) {
  margin-bottom: 1rem;
}

.heading.c2 + .sub-heading {
  margin-top: -1rem;
}

h1.c2 {
  font-size: 3rem;
}

h2.c2 {
  font-size: 2.5rem;
}

h3.c2 {
  font-size: 2rem;
}

h4.c2 {
  font-size: 1.5rem;
}

h5.c2 {
  font-size: 1.25rem;
}

h6.c2 {
  font-size: 1rem;
}

.c2 .c3 {
  top: 0.15em;
}

.c2 {
  font-weight: 600;
}

<div>
  <h3
    class="heading c0 c1"
  >
    heading
  </h3>
  <h5
    class="sub-heading c2 c1"
  >
    subheading
  </h5>
</div>
`;

exports[`renders correctly for a subheading 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  font-weight: 700;
  line-height: 1.2;
}

.c0:not(:last-child) {
  margin-bottom: 1rem;
}

.heading.c0 + .sub-heading {
  margin-top: -1rem;
}

h1.c0 {
  font-size: 3rem;
}

h2.c0 {
  font-size: 2.5rem;
}

h3.c0 {
  font-size: 2rem;
}

h4.c0 {
  font-size: 1.5rem;
}

h5.c0 {
  font-size: 1.25rem;
}

h6.c0 {
  font-size: 1rem;
}

.c0 .c2 {
  top: 0.15em;
}

.c0 {
  font-weight: 600;
}

<h3
  class="sub-heading c0 c1"
>
  test
</h3>
`;
